RESOLVED FIXED277930
REGRESSION(281640@main): [GTK] Build broken on non-Linux
https://bugs.webkit.org/show_bug.cgi?id=277930
Summary REGRESSION(281640@main): [GTK] Build broken on non-Linux
Jim Mason
Reported 2024-08-11 05:17:48 PDT
This commit modifies: Source/WebKit/WebProcess/WebPage/dmabuf/AcceleratedSurfaceDMABuf.cpp to include references to WebCore::GLFence::createExportable(), importFD(), and exportFD(). These methods are conditionally compiled in GLFence only for OS(LINUX). As a result, compilation fails on non-Linux. Compiler output follows below. Expected: AcceleratedSurfaceDMABuf.cpp should guard references these methods. /build/rtutils/components/desktop/webkitgtk4-dev/webkit/Source/WebKit/WebProcess/WebPage/dmabuf/AcceleratedSurfaceDMABuf.cpp:119:44: error: no member named 'createExportable' in 'WebCore::GLFence' 119 | if (auto fence = WebCore::GLFence::createExportable()) | ~~~~~~~~~~~~~~~~~~^ /build/rtutils/components/desktop/webkitgtk4-dev/webkit/Source/WebKit/WebProcess/WebPage/dmabuf/AcceleratedSurfaceDMABuf.cpp:141:40: error: no member named 'importFD' in 'WebCore::GLFence' 141 | if (auto fence = WebCore::GLFence::importFD(WTFMove(m_releaseFenceFD))) | ~~~~~~~~~~~~~~~~~~^ /build/rtutils/components/desktop/webkitgtk4-dev/webkit/Source/WebKit/WebProcess/WebPage/dmabuf/AcceleratedSurfaceDMABuf.cpp:649:33: error: no member named 'exportFD' in 'WebCore::GLFence' 649 | renderingFence = fence->exportFD(); | ~~~~~~~^ 3 errors generated.
Attachments
Adrian Perez
Comment 1 2024-08-13 03:23:50 PDT
Hi Jim! Thanks for the bug report. What system are you building for? Maybe a *BSD? If yes, maybe I can try to reproduce and fix the issue, otherwise I still think that I should be able to provide a tentative fix, and in that case would you be able to try making a build with a patch applied to validate the fix?
Jim Mason
Comment 2 2024-08-13 04:10:47 PDT
Hello Adrian, thanks for the prompt response! You should be able to reproduce on *BSD. (I am building on Solaris). Of course, I will be happy to validate any patch. Thanks again.
Carlos Garcia Campos
Comment 3 2024-08-28 02:15:59 PDT
Jim Mason
Comment 4 2024-08-28 02:36:01 PDT
(In reply to Carlos Garcia Campos from comment #3) > Pull request: https://github.com/WebKit/WebKit/pull/32814 Thanks! I am rebuilding now with the patch to confirm...
Jim Mason
Comment 5 2024-08-28 05:02:40 PDT
(In reply to Carlos Garcia Campos from comment #3) > Pull request: https://github.com/WebKit/WebKit/pull/32814 I am happy to report that the patch clears the build issue.
EWS
Comment 6 2024-08-28 06:15:33 PDT
Committed 282841@main (b53fec47fe5a): <https://commits.webkit.org/282841@main> Reviewed commits have been landed. Closing PR #32814 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.