Cherry-pick 282841@main (b53fec47fe5a). https://bugs.webkit.org/show_bug.cgi?id=277930

REGRESSION(281640@main): [GTK] Build broken on non-Linux
    https://bugs.webkit.org/show_bug.cgi?id=277930

    Reviewed by Adrian Perez de Castro.

    Use OS(UNIX) instead of OS(LINUX). If exportable fences are not
    available it will fail at runtime as expected.

    * Source/WebCore/platform/graphics/egl/GLFence.cpp:
    (WebCore::GLFence::capabilities):
    * Source/WebCore/platform/graphics/egl/GLFence.h:
    * Source/WebCore/platform/graphics/egl/GLFenceEGL.cpp:
    (WebCore::createEGLFence):
    * Source/WebCore/platform/graphics/egl/GLFenceEGL.h:

    Canonical link: https://commits.webkit.org/282841@main